# queryflux

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  deploy-website.yml
charts/queryflux/: README.md  values.yaml
charts/queryflux/templates/: NOTES.txt
crates/queryflux/: Cargo.toml
crates/queryflux-auth/src/: authorization.rs  provider.rs  resolver.rs
crates/queryflux-cache/: Cargo.toml
crates/queryflux-cache/src/: lib.rs  noop.rs  opendal_cache.rs
crates/queryflux-core/src/: config.rs  error.rs  params.rs  query.rs  tags.rs
crates/queryflux-e2e-tests/: Cargo.toml
crates/queryflux-e2e-tests/src/: harness.rs  lib.rs  snowflake_client.rs  snowflake_wire_client.rs
crates/queryflux-e2e-tests/tests/: query_params_tests.rs  snowflake_wire_tests.rs
crates/queryflux-engine-adapters/src/: lib.rs
crates/queryflux-fingerprint/src/: lib.rs  polyglot_pool.rs  rich.rs
crates/queryflux-frontend/: Cargo.toml
crates/queryflux-frontend/src/: admin.rs  dispatch.rs  lib.rs  state.rs  tee_sink.rs
crates/queryflux-metrics/src/: lib.rs  prometheus_store.rs
crates/queryflux-persistence/: Cargo.toml
crates/queryflux-persistence/src/: cache_store.rs  cluster_config.rs  (+5 more)
crates/queryflux/src/: main.rs
docker/fixtures/: init.docker-network.sql  init.sql
docker/queryflux/: Dockerfile-unified
examples/: README.md
examples/full-stack/: docker-compose.yml
grafana/dashboards/: queryflux.json
queryflux-studio/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
queryflux-studio/app/: client-shell.tsx  layout.tsx
queryflux-studio/components/: group-form-dialog.tsx
queryflux-studio/lib/: api-types.ts  api.ts  group-config-helpers.ts
website/: README.md  docusaurus.config.ts  package.json  seoConfig.ts  sidebars.ts  tsconfig.json
website/docs/: benchmarks.md  configuration.md  contribute.md  development.md  getting-started.md  intro.md  project-structure.md  roadmap.md  studio.md
website/scripts/: apply-doc-seo.mjs
website/seo/: docSeo.json
website/static/: robots.txt
website/versioned_sidebars/: version-0.1.0-sidebars.json  version-0.1.2-sidebars.json
(+70 files in other folders)
